--- a/space_monitor/package.json
+++ b/space_monitor/package.json
@@ -11,5 +11,10 @@
   "dependencies": {
     "express": "^4.14.0",
     "socket.io": "^1.4.8"
+  },
+  "devDependencies": {
+    "bootstrap-sass": "^3.3.7",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^2.3.2"
   }
 }
